tests/valid/01_ok.cps
let x: integer = 1;
let msg: string = "hola";
x = x + 2;
