tests/invalid/01_notOk.cps
let x: integer = 1;
let x: integer = 2;